Website: Release 1.48 on beta.
[SVN r75496]

--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@ http://www.boost.org/development/website_updating.html
 
 <h3>Current Release</h3>
 <ul id="downloads">
-<li><span class="news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.47.0/">Version 1.47.0</a> (<a href="/users/history/version_1_47_0.html">release notes</a>)</span><span class="news-date">July 11th, 2011 22:19 GMT</span></li>
-</ul><h3>Beta Release</h3>
-<ul id="downloads">
-<li><span class="news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Version 1.48.0</a> (<a href="/users/history/version_1_48_0.html">release notes</a>)</span><span class="news-date">In Progress</span></li>
+<li><span class="news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Version 1.48.0</a> (<a href="/users/history/version_1_48_0.html">release notes</a>)</span><span class="news-date">November 15th, 2011 15:47 GMT</span></li>
 </ul>
 
                   <p><a href="/users/download/">More Downloads...</a>
@@ -110,6 +107,16 @@ http://www.boost.org/development/website_updating.html
 
                   <ul id="news">
                     
+                    <li><span class=
+                    "news-title"><a href="/users/history/version_1_48_0.html">Version 1.48.0</a></span>
+                    <span class=
+                    "news-description"><span class="brief"><span class="purpose">
+      New Libraries: Container, Locale, Move. Updated Libraries: Asio, Chrono, Config,
+      Fusion, Geometry, Graph, Interprocess, Intrusive, Lexical cast, Math, MSM,
+      Numeric Conversion, Proto, Regex, Spirit, TypeTraits, Unordered, Wave
+    </span></span></span>
+                    <span class=
+                    "news-date">November 15th, 2011 15:47 GMT</span></li>
                     <li><span class=
                     "news-title"><a href="/users/history/version_1_47_0.html">Version 1.47.0</a></span>
                     <span class=
@@ -129,18 +136,7 @@ http://www.boost.org/development/website_updating.html
       TR1, Unordered.
     </span></span></span>
                     <span class=
-                    "news-date">March 12th, 2011 15:45 GMT</span></li>
-                    <li><span class=
-                    "news-title"><a href="/users/history/version_1_46_0.html">Version 1.46.0</a></span>
-                    <span class=
-                    "news-description"><span class="brief"><span class="purpose">
-      New Libraries: Icl. Updated Libraries: Array, Asio, Bind, Concept Check, Filesystem,
-      Fusion, Hash, Iostreams, Iterator, Math, Meta State Machine, Optional, Pool,
-      Program Options, Proto, Signals, Spirit, Tokenizer, Unordered, Wave. Updated
-      Tools: Boostbook, Inspect, Quickbook.
-    </span></span></span>
-                    <span class=
-                    "news-date">February 21st, 2011 20:36 GMT</span></li>                  </ul>
+                    "news-date">March 12th, 2011 15:45 GMT</span></li>                  </ul>
 
                   <p><a href="/users/news/">More News...</a> (<a href=
                   "feed/news.rss">RSS</a>)</p>
