--- a/users/history/index.html
+++ b/users/history/index.html
@@ -28,6 +28,24 @@
             <div class="section-body">
               
               <h2 class="news-title">
+              <a name="iversion_1_48_0" id="iversion_1_48_0"></a><a href="/users/history/version_1_48_0.html">Version 1.48.0</a></h2>
+
+              <p class="news-date">November 15th, 2011 15:47 GMT</p>
+
+              <div class="news-description">
+                <span class="brief"><span class="purpose">
+      New Libraries: Container, Locale, Move. Updated Libraries: Asio, Chrono, Config,
+      Fusion, Geometry, Graph, Interprocess, Intrusive, Lexical cast, Math, MSM,
+      Numeric Conversion, Proto, Regex, Spirit, TypeTraits, Unordered, Wave
+    </span></span>              </div>
+
+              <ul class="menu">
+                <li>
+                <a href="/users/history/version_1_48_0.html">Details</a></li>
+
+                                <li><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Download</a></li>
+                              </ul>
+              <h2 class="news-title">
               <a name="iversion_1_47_0" id="iversion_1_47_0"></a><a href="/users/history/version_1_47_0.html">Version 1.47.0</a></h2>
 
               <p class="news-date">July 11th, 2011 22:19 GMT</p>
