--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.48.0 beta release</title>
+  <title>Version 1.48.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -32,7 +32,7 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Version 1.48.0 beta release</h1>
+              <h1>Version 1.48.0</h1>
             </div>
 
             <div class="section-body">
@@ -40,9 +40,11 @@
               "news-title">Version 1.48.0</span></h2>
 
               <p><span class=
-              "news-date">In Progress</span></p>
-<p><a href="/doc/libs/1_48_0_beta1/">Documentation</a>
-              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0.beta.1/">Download this beta release.</a></span></p>
+              "news-date">November 15th, 2011 15:47 GMT</span></p>
+<p><a href="/doc/libs/1_48_0/">Documentation</a>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/boost_1_48_0.tar.bz2/download">boost_1_48_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/boost_1_48_0.tar.gz/download">boost_1_48_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/boost_1_48_0.7z/download">boost_1_48_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/boost_1_48_0.zip/download">boost_1_48_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
   
