Website: Merge from beta to live.
[SVN r75497]

--- a/users/download/index.html
+++ b/users/download/index.html
@@ -27,35 +27,33 @@
 
             <div class="section-body">
               <ul class="toc">
-                <li><a href="#releases">Packaged Releases</a></li>
+<li><a href="#live">Current Release</li>
 
                 <li><a href="#history">Old Boost Releases</a></li>
 
                 <li><a href="#repository">Subversion Repository</a></li>
               </ul>
-
-              <h2><a name="releases" id="releases"></a>Packaged
-              Releases</h2>
+<h2 id="live">Current Release</h2>
               <h3><span class=
-              "news-title">Version 1.47.0</span></h3>
+              "news-title">Version 1.48.0</span></h3>
 
-              <p class="news-date">July 11th, 2011 18:19 GMT</p>
+              <p class="news-date">November 15th, 2011 15:47 GMT</p>
 
               <p class="news-description">
               <span class="brief"><span class="purpose">
-      New Libraries: Chrono, Geometry, Phoenix and Ratio. Updated Libraries: Accumulators,
-      Asio, Config, DateTime, Dynamic Bitset, Foreach, Function, Function Types,
-      Graph, Iostreams, Iterator, Lexical Cast, Logic, Math, Meta State Machine,
-      MultiIndex, Proto, Random, Range, Spirit, Tokenizer, Utility, Uuid, Wave
+      New Libraries: Container, Locale, Move. Updated Libraries: Asio, Chrono, Config,
+      Fusion, Geometry, Graph, Interprocess, Intrusive, Lexical cast, Math, MSM,
+      Numeric Conversion, Proto, Regex, Spirit, TypeTraits, Unordered, Wave
     </span></span></p>
 
               <ul class="menu">
                 <li>
-                <a href="/users/history/version_1_47_0.html">Details</a></li>
+                <a href="/users/history/version_1_48_0.html">Details</a></li>
 
                 <li>
-                <a href="http://sourceforge.net/projects/boost/files/boost/1.47.0/">Download</a></li>
+                <a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Download</a></li>
               </ul>
+
               <h2><a name="history" id="history"></a>Old Boost Releases</h2>
 
               <p>Old versions of boost can be found on the <a href=
