--- a/users/history/version_1_33_1.html
+++ b/users/history/version_1_33_1.html
@@ -41,7 +41,7 @@
 
               <p><span class=
               "news-date">December  5th, 2006 12:00 GMT</span></p>
-
+<p><a href="/doc/libs/1_33_1/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.bz2/download">boost_1_33_1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.tar.gz/download">boost_1_33_1.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.exe/download">boost_1_33_1.exe</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.33.1/boost_1_33_1.zip/download">boost_1_33_1.zip</a></td></tr></table>
@@ -76,25 +76,24 @@
       <li>
         <div>
           <span class="library"><a href="/doc/libs/1_33_1/libs/python/doc/index.html">Boost.Python</a>:</span>
-
+          <ul>
+            <li>
+              <div>
+                The build now assumes Python 2.4 by default, rather than 2.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Support Python that's built without Unicode support
+              </div>
+            </li>
+            <li>
+              <div>
+                Support for wrapping classes with overloaded address-of (<code><span class="special">&amp;</span></code>) operators
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              The build now assumes Python 2.4 by default, rather than 2.2
-            </div>
-          </li>
-          <li>
-            <div>
-              Support Python that's built without Unicode support
-            </div>
-          </li>
-          <li>
-            <div>
-              Support for wrapping classes with overloaded address-of (<code><span class="special">&amp;</span></code>) operators
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
@@ -123,47 +122,46 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_33_1/libs/python/doc/index.html">Boost.Python</a>:</span> 
-
+          <span class="library"><a href="/doc/libs/1_33_1/libs/python/doc/index.html">Boost.Python</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added support for docstrings on nonstatic properties.
+              </div>
+            </li>
+            <li>
+              <div>
+                We now export the client-provided docstrings for <code><span class="identifier">init</span><span class="special">&lt;</span><span class="identifier">optional</span><span class="special">&lt;&gt;</span> <span class="special">&gt;</span></code>
+                and <em>XXX</em><code><span class="identifier">_FUNCTION_OVERLOADS</span><span class="special">()</span></code> for only the last overload.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support for Embedded VC++ 4 and GCC-3.3 on MacOS added
+              </div>
+            </li>
+            <li>
+              <div>
+                Introduced better support for rvalue from-python conversions of shared_ptr.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support for exposing <code><span class="identifier">vector</span><span class="special">&lt;</span><span class="identifier">T</span><span class="special">*&gt;</span></code> with the indexing suite.
+              </div>
+            </li>
+            <li>
+              <div>
+                updated visual studio project build file.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added search feature to the index page.
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              Added support for docstrings on nonstatic properties.
-            </div>
-          </li>
-          <li>
-            <div>
-              We now export the client-provided docstrings for <code><span class="identifier">init</span><span class="special">&lt;</span><span class="identifier">optional</span><span class="special">&lt;&gt;</span> <span class="special">&gt;</span></code>
-              and <em>XXX</em><code><span class="identifier">_FUNCTION_OVERLOADS</span><span class="special">()</span></code> for only the last overload.
-            </div>
-          </li>
-          <li>
-            <div>
-              Support for Embedded VC++ 4 and GCC-3.3 on MacOS added
-            </div>
-          </li>
-          <li>
-            <div>
-              Introduced better support for rvalue from-python conversions of shared_ptr.
-            </div>
-          </li>
-          <li>
-            <div>
-              Support for exposing <code><span class="identifier">vector</span><span class="special">&lt;</span><span class="identifier">T</span><span class="special">*&gt;</span></code> with the indexing suite.
-            </div>
-          </li>
-          <li>
-            <div>
-              updated visual studio project build file.
-            </div>
-          </li>
-          <li>
-            <div>
-              Added search feature to the index page.
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
@@ -185,28 +183,28 @@
         <div>
           <span class="library"><a href="/doc/libs/1_33_1/libs/graph/doc/table_of_contents.html">Graph
           Library</a>:</span>
-
+          <ul>
+            <li>
+              <div>
+                Fixed a problem with the relaxed heap on x86 Linux (fixes bug in
+                <code><span class="identifier">dijkstra_shortest_paths</span></code>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed problems with <a href="/doc/libs/1_33_1/libs/graph/doc/cuthill_mckee_ordering.html"><code><span class="identifier">cuthill_mckee_ordering</span></code></a>
+                and <a href="/doc/libs/1_33_1/libs/graph/doc/king_ordering.html"><code><span class="identifier">king_ordering</span></code></a> producing
+                no results.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added <code><span class="identifier">color_map</span></code> parameter
+                to <code><span class="identifier">dijkstra_shortest_paths</span></code>.
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              Fixed a problem with the relaxed heap on x86 Linux (fixes bug in <code><span class="identifier">dijkstra_shortest_paths</span></code>).
-            </div>
-          </li>
-          <li>
-            <div>
-              Fixed problems with <a href="/doc/libs/1_33_1/libs/graph/doc/cuthill_mckee_ordering.html"><code><span class="identifier">cuthill_mckee_ordering</span></code></a> and
-              <a href="/doc/libs/1_33_1/libs/graph/doc/king_ordering.html"><code><span class="identifier">king_ordering</span></code></a> producing no
-              results.
-            </div>
-          </li>
-          <li>
-            <div>
-              Added <code><span class="identifier">color_map</span></code> parameter
-              to <code><span class="identifier">dijkstra_shortest_paths</span></code>.
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
