--- a/users/history/version_1_34_1.html
+++ b/users/history/version_1_34_1.html
@@ -40,8 +40,8 @@
               "news-title">Version 1.34.1</span></h2>
 
               <p><span class=
-              "news-date">July 24th, 2007 11:00 GMT</span></p>
-
+              "news-date">July 24th, 2007 12:00 GMT</span></p>
+<p><a href="/doc/libs/1_34_1/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.1/boost_1_34_1.tar.bz2/download">boost_1_34_1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.1/boost_1_34_1.tar.gz/download">boost_1_34_1.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.1/boost_1_34_1.7z/download">boost_1_34_1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.34.1/boost_1_34_1.zip/download">boost_1_34_1.zip</a></td></tr></table>
@@ -84,24 +84,24 @@
       <li>
         <div>
           <a href="http://gcc.gnu.org/">GNU C++</a>
+          <ul>
+            <li>
+              <div>
+                3.2.x., 3.3.x, 3.4.x, 4.0.x, 4.1.x on Linux
+              </div>
+            </li>
+            <li>
+              <div>
+                4.1.x on Solaris
+              </div>
+            </li>
+            <li>
+              <div>
+                3.4.x on Windows
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <div>
-              3.2.x., 3.3.x, 3.4.x, 4.0.x, 4.1.x on Linux
-            </div>
-          </li>
-          <li>
-            <div>
-              4.1.x on Solaris
-            </div>
-          </li>
-          <li>
-            <div>
-              3.4.x on Windows
-            </div>
-          </li>
-        </ul>
       </li>
       <li>
         <div>
