--- a/index.html
+++ b/index.html
@@ -93,14 +93,10 @@ http://www.boost.org/development/website_updating.html
                 <div class="directory-item" id="important-downloads">
                   <h2>Downloads</h2>
 
-                  <ul id="downloads">
-                    
-                    <li><span class=
-                    "news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.47.0/">Version 1.47.0</a>                    (<a href="/users/history/version_1_47_0.html">release notes</a>)
-                    </span>
-                    <span class=
-                    "news-date">July 11th, 2011 18:19 GMT</span></li>
-                  </ul>
+<h3>Current Release</h3>
+<ul id="downloads">
+<li><span class="news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Version 1.48.0</a> (<a href="/users/history/version_1_48_0.html">release notes</a>)</span><span class="news-date">November 15th, 2011 15:47 GMT</span></li>
+</ul>
 
                   <p><a href="/users/download/">More Downloads...</a>
                   (<a href="feed/downloads.rss">RSS</a>)</p>
@@ -112,6 +108,16 @@ http://www.boost.org/development/website_updating.html
                   <ul id="news">
                     
                     <li><span class=
+                    "news-title"><a href="/users/history/version_1_48_0.html">Version 1.48.0</a></span>
+                    <span class=
+                    "news-description"><span class="brief"><span class="purpose">
+      New Libraries: Container, Locale, Move. Updated Libraries: Asio, Chrono, Config,
+      Fusion, Geometry, Graph, Interprocess, Intrusive, Lexical cast, Math, MSM,
+      Numeric Conversion, Proto, Regex, Spirit, TypeTraits, Unordered, Wave
+    </span></span></span>
+                    <span class=
+                    "news-date">November 15th, 2011 15:47 GMT</span></li>
+                    <li><span class=
                     "news-title"><a href="/users/history/version_1_47_0.html">Version 1.47.0</a></span>
                     <span class=
                     "news-description"><span class="brief"><span class="purpose">
@@ -121,7 +127,7 @@ http://www.boost.org/development/website_updating.html
       MultiIndex, Proto, Random, Range, Spirit, Tokenizer, Utility, Uuid, Wave
     </span></span></span>
                     <span class=
-                    "news-date">July 11th, 2011 18:19 GMT</span></li>
+                    "news-date">July 11th, 2011 22:19 GMT</span></li>
                     <li><span class=
                     "news-title"><a href="/users/history/version_1_46_1.html">Version 1.46.1</a></span>
                     <span class=
@@ -130,18 +136,7 @@ http://www.boost.org/development/website_updating.html
       TR1, Unordered.
     </span></span></span>
                     <span class=
-                    "news-date">March 12th, 2011 15:45 GMT</span></li>
-                    <li><span class=
-                    "news-title"><a href="/users/history/version_1_46_0.html">Version 1.46.0</a></span>
-                    <span class=
-                    "news-description"><span class="brief"><span class="purpose">
-      New Libraries: Icl. Updated Libraries: Array, Asio, Bind, Concept Check, Filesystem,
-      Fusion, Hash, Iostreams, Iterator, Math, Meta State Machine, Optional, Pool,
-      Program Options, Proto, Signals, Spirit, Tokenizer, Unordered, Wave. Updated
-      Tools: Boostbook, Inspect, Quickbook.
-    </span></span></span>
-                    <span class=
-                    "news-date">February 21st, 2011 20:36 GMT</span></li>                  </ul>
+                    "news-date">March 12th, 2011 15:45 GMT</span></li>                  </ul>
 
                   <p><a href="/users/news/">More News...</a> (<a href=
                   "feed/news.rss">RSS</a>)</p>
