--- a/users/history/index.html
+++ b/users/history/index.html
@@ -28,9 +28,27 @@
             <div class="section-body">
               
               <h2 class="news-title">
+              <a name="iversion_1_48_0" id="iversion_1_48_0"></a><a href="/users/history/version_1_48_0.html">Version 1.48.0</a></h2>
+
+              <p class="news-date">November 15th, 2011 15:47 GMT</p>
+
+              <div class="news-description">
+                <span class="brief"><span class="purpose">
+      New Libraries: Container, Locale, Move. Updated Libraries: Asio, Chrono, Config,
+      Fusion, Geometry, Graph, Interprocess, Intrusive, Lexical cast, Math, MSM,
+      Numeric Conversion, Proto, Regex, Spirit, TypeTraits, Unordered, Wave
+    </span></span>              </div>
+
+              <ul class="menu">
+                <li>
+                <a href="/users/history/version_1_48_0.html">Details</a></li>
+
+                                <li><a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Download</a></li>
+                              </ul>
+              <h2 class="news-title">
               <a name="iversion_1_47_0" id="iversion_1_47_0"></a><a href="/users/history/version_1_47_0.html">Version 1.47.0</a></h2>
 
-              <p class="news-date">July 11th, 2011 18:19 GMT</p>
+              <p class="news-date">July 11th, 2011 22:19 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -103,7 +121,7 @@
               <h2 class="news-title">
               <a name="iversion_1_44_0" id="iversion_1_44_0"></a><a href="/users/history/version_1_44_0.html">Version 1.44.0</a></h2>
 
-              <p class="news-date">August 13th, 2010 16:00 GMT</p>
+              <p class="news-date">August 13th, 2010 17:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -122,7 +140,7 @@
               <h2 class="news-title">
               <a name="iversion_1_43_0" id="iversion_1_43_0"></a><a href="/users/history/version_1_43_0.html">Version 1.43.0</a></h2>
 
-              <p class="news-date">May  6th, 2010 11:00 GMT</p>
+              <p class="news-date">May  6th, 2010 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -179,7 +197,7 @@
               <h2 class="news-title">
               <a name="iversion_1_40_0" id="iversion_1_40_0"></a><a href="/users/history/version_1_40_0.html">Version 1.40.0</a></h2>
 
-              <p class="news-date">August 27th, 2009 16:00 GMT</p>
+              <p class="news-date">August 27th, 2009 17:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -197,7 +215,7 @@
               <h2 class="news-title">
               <a name="iversion_1_39_0" id="iversion_1_39_0"></a><a href="/users/history/version_1_39_0.html">Version 1.39.0</a></h2>
 
-              <p class="news-date">May  2nd, 2009 11:00 GMT</p>
+              <p class="news-date">May  2nd, 2009 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -252,7 +270,7 @@
               <h2 class="news-title">
               <a name="iversion_1_36_0" id="iversion_1_36_0"></a><a href="/users/history/version_1_36_0.html">Version 1.36.0</a></h2>
 
-              <p class="news-date">August 14th, 2008 11:00 GMT</p>
+              <p class="news-date">August 14th, 2008 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -289,7 +307,7 @@
               <h2 class="news-title">
               <a name="iversion_1_34_1" id="iversion_1_34_1"></a><a href="/users/history/version_1_34_1.html">Version 1.34.1</a></h2>
 
-              <p class="news-date">July 24th, 2007 11:00 GMT</p>
+              <p class="news-date">July 24th, 2007 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -305,7 +323,7 @@
               <h2 class="news-title">
               <a name="iversion_1_34_0" id="iversion_1_34_0"></a><a href="/users/history/version_1_34_0.html">Version 1.34.0</a></h2>
 
-              <p class="news-date">May 12th, 2007 11:00 GMT</p>
+              <p class="news-date">May 12th, 2007 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -341,7 +359,7 @@
               <h2 class="news-title">
               <a name="iversion_1_33_0" id="iversion_1_33_0"></a><a href="/users/history/version_1_33_0.html">Version 1.33.0</a></h2>
 
-              <p class="news-date">August 11th, 2005 11:00 GMT</p>
+              <p class="news-date">August 11th, 2005 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -395,7 +413,7 @@
               <h2 class="news-title">
               <a name="iversion_1_30_2" id="iversion_1_30_2"></a><a href="/users/history/version_1_30_2.html">Version 1.30.2</a></h2>
 
-              <p class="news-date">August 19th, 2003 11:00 GMT</p>
+              <p class="news-date">August 19th, 2003 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -411,7 +429,7 @@
               <h2 class="news-title">
               <a name="iversion_1_30_1" id="iversion_1_30_1"></a><a href="/users/history/version_1_30_1.html">Version 1.30.1</a></h2>
 
-              <p class="news-date">August  4th, 2003 11:00 GMT</p>
+              <p class="news-date">August  4th, 2003 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -444,7 +462,7 @@
               <h2 class="news-title">
               <a name="iversion_1_29_0" id="iversion_1_29_0"></a><a href="/users/history/version_1_29_0.html">Version 1.29.0</a></h2>
 
-              <p class="news-date">October 10th, 2002 11:00 GMT</p>
+              <p class="news-date">October 10th, 2002 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -461,7 +479,7 @@
               <h2 class="news-title">
               <a name="iversion_1_28_0" id="iversion_1_28_0"></a><a href="/users/history/version_1_28_0.html">Version 1.28.0</a></h2>
 
-              <p class="news-date">May 15th, 2002 11:00 GMT</p>
+              <p class="news-date">May 15th, 2002 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -528,7 +546,7 @@
               <h2 class="news-title">
               <a name="iversion_1_25_0" id="iversion_1_25_0"></a><a href="/users/history/version_1_25_0.html">Version 1.25.0</a></h2>
 
-              <p class="news-date">October  1st, 2001 11:00 GMT</p>
+              <p class="news-date">October  1st, 2001 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -545,7 +563,7 @@
               <h2 class="news-title">
               <a name="iversion_1_24_0" id="iversion_1_24_0"></a><a href="/users/history/version_1_24_0.html">Version 1.24.0</a></h2>
 
-              <p class="news-date">August 19th, 2001 11:00 GMT</p>
+              <p class="news-date">August 19th, 2001 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -561,7 +579,7 @@
               <h2 class="news-title">
               <a name="iversion_1_23_0" id="iversion_1_23_0"></a><a href="/users/history/version_1_23_0.html">Version 1.23.0</a></h2>
 
-              <p class="news-date">July  6th, 2001 11:00 GMT</p>
+              <p class="news-date">July  6th, 2001 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -578,7 +596,7 @@
               <h2 class="news-title">
               <a name="iversion_1_22_0" id="iversion_1_22_0"></a><a href="/users/history/version_1_22_0.html">Version 1.22.0</a></h2>
 
-              <p class="news-date">May 25th, 2001 11:00 GMT</p>
+              <p class="news-date">May 25th, 2001 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -594,7 +612,7 @@
               <h2 class="news-title">
               <a name="iversion_1_21_2" id="iversion_1_21_2"></a><a href="/users/history/version_1_21_2.html">Version 1.21.2</a></h2>
 
-              <p class="news-date">April 24th, 2001 11:00 GMT</p>
+              <p class="news-date">April 24th, 2001 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -736,7 +754,7 @@
               <h2 class="news-title">
               <a name="iversion_1_18_1" id="iversion_1_18_1"></a><a href="/users/history/version_1_18_1.html">Version 1.18.1</a></h2>
 
-              <p class="news-date">October 15th, 2000 11:00 GMT</p>
+              <p class="news-date">October 15th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -751,7 +769,7 @@
               <h2 class="news-title">
               <a name="iversion_1_18_0" id="iversion_1_18_0"></a><a href="/users/history/version_1_18_0.html">Version 1.18.0</a></h2>
 
-              <p class="news-date">September 28th, 2000 11:00 GMT</p>
+              <p class="news-date">September 28th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -767,7 +785,7 @@
               <h2 class="news-title">
               <a name="iversion_1_17_0" id="iversion_1_17_0"></a><a href="/users/history/version_1_17_0.html">Version 1.17.0</a></h2>
 
-              <p class="news-date">August  3rd, 2000 11:00 GMT</p>
+              <p class="news-date">August  3rd, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -783,7 +801,7 @@
               <h2 class="news-title">
               <a name="iversion_1_16_1" id="iversion_1_16_1"></a><a href="/users/history/version_1_16_1.html">Version 1.16.1</a></h2>
 
-              <p class="news-date">July  5th, 2000 11:00 GMT</p>
+              <p class="news-date">July  5th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -798,7 +816,7 @@
               <h2 class="news-title">
               <a name="iversion_1_16_0" id="iversion_1_16_0"></a><a href="/users/history/version_1_16_0.html">Version 1.16.0</a></h2>
 
-              <p class="news-date">June 28th, 2000 11:00 GMT</p>
+              <p class="news-date">June 28th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -814,7 +832,7 @@
               <h2 class="news-title">
               <a name="iversion_1_15_1" id="iversion_1_15_1"></a><a href="/users/history/version_1_15_1.html">Version 1.15.1</a></h2>
 
-              <p class="news-date">June 21st, 2000 11:00 GMT</p>
+              <p class="news-date">June 21st, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -829,7 +847,7 @@
               <h2 class="news-title">
               <a name="iversion_1_15_0" id="iversion_1_15_0"></a><a href="/users/history/version_1_15_0.html">Version 1.15.0</a></h2>
 
-              <p class="news-date">June 17th, 2000 11:00 GMT</p>
+              <p class="news-date">June 17th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -844,7 +862,7 @@
               <h2 class="news-title">
               <a name="iversion_1_14_3" id="iversion_1_14_3"></a><a href="/users/history/version_1_14_3.html">Version 1.14.3</a></h2>
 
-              <p class="news-date">May 29th, 2000 11:00 GMT</p>
+              <p class="news-date">May 29th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
@@ -859,7 +877,7 @@
               <h2 class="news-title">
               <a name="iversion_1_14_2" id="iversion_1_14_2"></a><a href="/users/history/version_1_14_2.html">Version 1.14.2</a></h2>
 
-              <p class="news-date">May  9th, 2000 11:00 GMT</p>
+              <p class="news-date">May  9th, 2000 12:00 GMT</p>
 
               <div class="news-description">
                 <span class="brief"><span class="purpose">
