Website: Merge from live to beta.
[SVN r75499]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -108,21 +108,6 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-<!-- On hold until the library is ready.
-                  <tr>
-                    <td>AutoBuffer</td>
-
-                    <td>Thorsten Ottosen</td>
-
-                    <td><a href=
-		    "http://www.cs.aau.dk/~nesotto/boost/auto_buffer.zip">
-		    http://www.cs.aau.dk/~nesotto/boost/auto_buffer.zip</a></td>
-
-                    <td>Robert Stewart</td>
-
-                    <td>-</td>
-                  </tr>
--->
                   <tr>
                     <td>Quaternions, Vectors, Matrices (QVM)</td>
 
@@ -132,19 +117,6 @@ http://www.boost.org/development/website_updating.html
 			http://www.revergestudios.com/boost-qvm/</a></td>
 
                     <td>Needed</td>
-
-                    <td>-</td>
-                  </tr>
-
-                  <tr>
-                    <td>Stopwatches</td>
-
-                    <td>Vicente Botet</td>
-
-                    <td><a href="http://www.boostpro.com/vault/index.php?action=downloadfile&amp;filename=stopwatches.zip&amp;directory=System">
-			Boost Vault</a></td>
-
-                    <td>Anthony Williams</td>
 
                     <td>-</td>
                   </tr>
@@ -187,19 +159,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Local</td>
-
-                    <td>Lorenzo Caminiti</td>
-
-                    <td>
-		      <a href="http://svn.boost.org/svn/boost/sandbox/local/">Boost Sandbox</a></td>
-
-                    <td>Jeffrey Hellrung</td>
-
-                    <td>October 24, 2011 - November 2, 2011</td>
-                  </tr>
-
-                  <tr>
                     <td>Singularity</td>
 
                     <td>Ben Robinson</td>
@@ -212,18 +171,6 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-                  <tr>
-                    <td>Atomic</td>
-
-                    <td>Helge Bahmann</td>
-
-                    <td>Forthcoming
-		      <a href=""></a></td>
-
-                    <td>Tim Blechmann</td>
-
-                    <td>October 17, 2011 - October 26, 2011</td>
-                  </tr>
 
 		</tbody>
               </table>
@@ -246,6 +193,37 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
+                    <td>Local</td>
+
+                    <td>Lorenzo Caminiti</td>
+
+                    <td>Jeffrey Hellrung</td>
+
+                    <td>November 10, 2011 - November 19, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/11/0338.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
+
+                  <tr>
+                    <td>Atomic</td>
+
+                    <td>Helge Bahmann</td>
+
+                    <td>Tim Blechmann</td>
+
+                    <td>October 17, 2011 - October 26, 2011</td>
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/11/0337.php">
+			Accepted</a>
+		    </td>
+                  </tr>
+
+                  <tr>
                     <td>Algorithm</td>
 
                     <td>Marshall Clow</td>
@@ -257,7 +235,7 @@ http://www.boost.org/development/website_updating.html
 		    <td>
         	      <a href=
 		     "http://lists.boost.org/boost-announce/2011/09/0333.php">
-			Ongoing</a>
+			Pending</a>
 		    </td>
                   </tr>
 
@@ -273,8 +251,8 @@ http://www.boost.org/development/website_updating.html
 
 		    <td>
         	      <a href=
-		     "http://lists.boost.org/boost-announce/2011/09/0332.php">
-			Pending</a>
+		     "http://lists.boost.org/boost-announce/2011/11/0336.php">
+			Conditionally Accepted</a>
 		    </td>
                   </tr>
 
