--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -193,6 +193,19 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
+                    <td>Boost 1.48.0 Released</td>
+
+                    <td></td>
+
+                    <td>Beman Dawes</td>
+
+                    <td>November 16, 2011</td>
+
+                    <td><a href=
+                    "http://www.boost.org/users/news/version_1_48_0">Notes</a></td>
+                  </tr>
+
+                  <tr>
                     <td>Local</td>
 
                     <td>Lorenzo Caminiti</td>
