Website: Add documentation link to download page.
[SVN r75656]

--- a/users/download/index.html
+++ b/users/download/index.html
@@ -52,6 +52,8 @@
 
                 <li>
                 <a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Download</a></li>
+                <li>
+                <a href="/doc/libs/1_48_0/">Documentation</a></li>
               </ul>
 
               <h2><a name="history" id="history"></a>Old Boost Releases</h2>
