Heaps has been added to SVN.
[SVN r75865]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -389,7 +389,7 @@ http://www.boost.org/development/website_updating.html
 			Pending</a></del><br/>
 		      <a href=
                     "http://lists.boost.org/boost-announce/2011/06/0316.php">
-			Accepted</a></td>
+			Accepted -- Added to SVN</a></td>
                   </tr>
 
                   <tr>
