--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -215,9 +215,12 @@ http://www.boost.org/development/website_updating.html
                     <td>November 10, 2011 - November 19, 2011</td>
 
 		    <td>
-        	      <a href=
+        	      <del><a href=
 		     "http://lists.boost.org/boost-announce/2011/11/0338.php">
-			Ongoing</a>
+			Ongoing</a></del><br>
+<a href=
+		     "http://lists.boost.org/boost-announce/2011/12/0340.php">
+			Accepted</a>
 		    </td>
                   </tr>
 
