Algorithm was accepted. Predef has been added to the schedule.
[SVN r76105]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -171,6 +171,19 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <td>Predef</td>
+
+                    <td>Rene Rivera</td>
+
+                    <td>
+		      <a href="http://tinyurl.com/73n6a3k">Source</a></td>
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
 
 		</tbody>
               </table>
@@ -249,9 +262,12 @@ http://www.boost.org/development/website_updating.html
                     <td>September 22, 2011 - October 1, 2011</td>
 
 		    <td>
-        	      <a href=
+        	      <del><a href=
 		     "http://lists.boost.org/boost-announce/2011/09/0333.php">
-			Pending</a>
+			Pending</a></del><br>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/12/0341.php">
+			Accepted</a>
 		    </td>
                   </tr>
 
