Context is back on the schedule and scheduled for review.
[SVN r76171]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -184,6 +184,24 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <td>Context</td>
+
+                    <td>Oliver Kowalke</td>
+
+		    <td>
+		      <ul>
+			<li><a href="http://ok73.ok.funpic.de/boost/libs/context/doc/html/">Documentation</a></li>
+			
+			<li><a href="">Source</a></li>
+		      </ul>
+		    </td>
+
+                    <td>Giovanni Deretta</td>
+
+                    <td>January 2, 2012 - January 11, 2012</td>
+
+                  </tr>
 
 		</tbody>
               </table>
