Switch is now marked Orphaned. Context review is ongoing.
[SVN r76309]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -184,25 +184,6 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-                  <tr>
-                    <td>Context</td>
-
-                    <td>Oliver Kowalke</td>
-
-		    <td>
-		      <ul>
-			<li><a href="http://ok73.ok.funpic.de/boost/libs/context/doc/html/">Documentation</a></li>
-			
-			<li><a href="git://github.com/olk/boost.context.git">Source</a></li>
-		      </ul>
-		    </td>
-
-                    <td>Giovanni Deretta</td>
-
-                    <td>January 2, 2012 - January 11, 2012</td>
-
-                  </tr>
-
 		</tbody>
               </table>
 
@@ -222,6 +203,21 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <td>Context</td>
+
+                    <td>Oliver Kowalke</td>
+
+                    <td>Giovanni Deretta</td>
+
+                    <td>January 2, 2012 - January 11, 2012</td>
+
+        	    <td><a href=
+		     "http://lists.boost.org/boost-announce/2012/01/0343.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
 
                   <tr>
                     <td>Boost 1.48.0 Released</td>
@@ -1206,9 +1202,10 @@ http://www.boost.org/development/website_updating.html
 
                     <td>January 5, 2008 - January 13, 2008</td>
 
-                    <td><a href=
+                    <td><del><a href=
                     "http://lists.boost.org/boost-announce/2008/01/0166.php">Accepted
-                    Provisionally</a></td>
+                    Provisionally</a></del>
+		    Orphaned</td>
                   </tr>
 
                   <tr>
