context review is a mini-review.
[SVN r76310]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -205,7 +205,7 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
-                    <td>Context</td>
+                    <td>Context (mini-review)</td>
 
                     <td>Oliver Kowalke</td>
 
