Container, Locale, and Move were added in Boost 1.48.0
[SVN r76311]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -328,9 +328,12 @@ http://www.boost.org/development/website_updating.html
                     <td>August 3, 2011 - August 12, 2011</td>
 
 		    <td>
-        	      <a href=
+        	      <del><a href=
 		     "http://lists.boost.org/boost-announce/2011/08/0329.php">
-			Pending</a>
+			  Pending</a></del><br>
+		      <a href=
+			 "http://lists.boost.org/Archives/boost/2011/08/184936.php">
+			 Accepted -- Added in 1.48.0</a>
 		    </td>
                   </tr>
 
@@ -493,7 +496,7 @@ http://www.boost.org/development/website_updating.html
 			Pending</a></del><br/>
 			<a href=
 		    "http://lists.boost.org/boost-announce/2011/04/0304.php">
-			Accepted</a>
+			Accepted -- Added in 1.48.0</a>
 		    </td>
                   </tr>
 
@@ -727,7 +730,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td><a href=
                     "http://lists.boost.org/boost-announce/2011/02/0283.php">
-		    Accepted</a></td>
+		    Accepted -- Added in 1.48.0</a></td>
                   </tr>
 
                   <tr>
