Type Traits Introspection was added to svn.
[SVN r76321]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -384,7 +384,7 @@ http://www.boost.org/development/website_updating.html
 			Pending</a></del><br/>
         	      <a href=
 		     "http://lists.boost.org/boost-announce/2011/08/0328.php">
-			Accepted</a>
+			Accepted -- Added to SVN</a>
 		    </td>
                   </tr>
 
