Website: Graph release notes.
I'll link the tickets later.


[SVN r76538]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -63,7 +63,25 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/libs/graph/">Graph</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs #5881, #6033, #6061, #6137, #6246, #6239, #6293, #6306,
+                #6313, and #6371, plus others not in Trac.
+              </div>
+            </li>
+            <li>
+              <div>
+                Re-enabled LEDA graph support (thanks to Jens Muller for the patch).
+              </div>
+            </li>
+            <li>
+              <div>
+                Added documentation for edge_predecessor_recorder.
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
