--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -192,6 +192,20 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
+                    <td>Review Wizard Status Report</td>
+
+                    <td></td>
+
+                    <td>Ronald Garcia</td>
+
+                    <td>January 10, 2012</td>
+
+                    <td><a href=
+                    "http://lists.boost.org/boost-announce/2012/01/0344.php">
+			Report</a></td>
+                  </tr>
+
+                  <tr>
                     <td>Context (mini-review)</td>
 
                     <td>Oliver Kowalke</td>
