Joel Falcou will manage the review of Predef.
[SVN r76635]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -166,7 +166,7 @@ http://www.boost.org/development/website_updating.html
                     <td>
 		      <a href="http://tinyurl.com/73n6a3k">Source</a></td>
 
-                    <td>Needed</td>
+                    <td>Joel Falcou</td>
 
                     <td>-</td>
                   </tr>
