Website: Merge from live.
[SVN r76660]

--- a/common/menu-doc.html
+++ b/common/menu-doc.html
@@ -95,6 +95,9 @@
 
         <li><a href="/libs/wave/doc/wave_driver.html">Wave <span class=
         "link">&gt;</span></a></li>
+
+        <li><a href="/tools/auto_index/">AutoIndex <span class=
+        "link">&gt;</span></a></li>
       </ul>
     </li>
   </ul>
