Website: Add Locale release note.
[SVN r76662]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -84,6 +84,19 @@
           </ul>
         </div>
       </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/locale/">Locale</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed incorrect use of <code><span class="identifier">MultiByteToWideChar</span></code>
+                in detection of invalid input sequences.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
   <div id="version_1_49_0.compilers_tested">
