Website: uuid notes.
[SVN r76663]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -97,6 +97,30 @@
           </ul>
         </div>
       </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/uuid/">Uuid</a>:</span>
+          <ul>
+            <li>
+              <div>
+                fixed <a href="https://svn.boost.org/trac/boost/ticket/6258">#6258</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                fixed <a href="https://svn.boost.org/trac/boost/ticket/5325">#5325</a>
+                (sha1 implementation handles messages as long as the specification)
+              </div>
+            </li>
+            <li>
+              <div>
+                progress on <a href="https://svn.boost.org/trac/boost/ticket/6118">#6118</a>
+                (there are fewer warnings)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
   <div id="version_1_49_0.compilers_tested">
