Website: Markup graph release notes.
[SVN r76664]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -67,8 +67,17 @@
           <ul>
             <li>
               <div>
-                Fixed bugs #5881, #6033, #6061, #6137, #6246, #6239, #6293, #6306,
-                #6313, and #6371, plus others not in Trac.
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/5881">#5881</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6033">#6033</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6061">#6061</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6137">#6137</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6246">#6246</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6239">#6239</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6293">#6293</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6306">#6306</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6313">#6313</a>
+                and <a href="https://svn.boost.org/trac/boost/ticket/6371">#6371</a>,
+                plus others not in Trac.
               </div>
             </li>
             <li>
@@ -78,7 +87,7 @@
             </li>
             <li>
               <div>
-                Added documentation for edge_predecessor_recorder.
+                Added documentation for <code><span class="identifier">edge_predecessor_recorder</span></code>.
               </div>
             </li>
           </ul>
