--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -63,6 +63,75 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/6336">#6336</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6335">#6335</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6287">#6287</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6205">#6205</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4383">#4383</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added <code><span class="identifier">allocator_traits</span></code>
+                support for both C++11 and C++03 compilers through an internal <code><span class="identifier">allocator_traits</span></code> clone.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs bugfix: distance for multi-geometries ignored specified
+                distance strategy. Fixed bugfix in difference for polygon/multi_polygon
+                (reported 2011/10/24 on GGL-list) bugfix: raise exception for calculation
+                of distances of multi-geometrie(s) where one of them is empty bugfix:
+                multi DSV did not correctly use settings, fixed bugfix: self-intersections
+                could sometimes be missed (introduced in 1.48), fixed bugfix: convex
+                hull crashed on empty range (e.g. empty multi point), fixed
+              </div>
+            </li>
+            <li>
+              <div>
+                Solved tickets <a href="https://svn.boost.org/trac/boost/ticket/6028">6028</a>
+                Documentation: closure, fixed. <a href="https://svn.boost.org/trac/boost/ticket/6178">6178</a>
+                Missing headerfile, fixed. <a href="https://svn.boost.org/trac/boost/ticket/6021">6021</a>
+                convex hull of multipoint, fixed.
+              </div>
+            </li>
+            <li>
+              <div>
+                Additional functionality support for line/polygon intersections and
+                differences support for convert of segment/box of different point
+                types support for append for multi point scalar functions (distance,
+                area, length, perimeter) now throw an empty_input_exception on empty
+                input
+              </div>
+            </li>
+            <li>
+              <div>
+                Documentation updated support status
+              </div>
+            </li>
+            <li>
+              <div>
+                Internal changes updates in specializations/not_implemented for distance/convert/assign/area
+                move of wkt/dsv to io folder, making domains redundant strategy concepts
+                assigned to zero to avoid clang warnings (patched by Vishnu)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/graph/">Graph</a>:</span>
           <ul>
             <li>
@@ -95,12 +164,80 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/6412">#6412</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6398">#6398</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6319">#6319</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6287">#6287</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6265">#6265</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6233">#6233</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6147">#6147</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6134">#6134</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6058">#6058</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6054">#6054</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5772">#5772</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5738">#5738</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5622">#5622</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5552">#5552</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5518">#5518</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4655">#4655</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4452">#4452</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4383">#4383</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/4297">#4297</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed timed functions in mutex implementations to fulfill POSIX requirements:
+                <em>Under no circumstance shall the function fail with a timeout
+                if the mutex can be locked immediately. The validity of the abs_timeout
+                parameter need not be checked if the mutex can be locked immediately.</em>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/6347">#6347</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6223">#6223</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6153">#6153</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/locale/">Locale</a>:</span>
           <ul>
             <li>
               <div>
                 Fixed incorrect use of <code><span class="identifier">MultiByteToWideChar</span></code>
                 in detection of invalid input sequences.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/6417">#6417</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6183">#6183</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6185">#6185</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6395">#6395</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6396">#6396</a>,
               </div>
             </li>
           </ul>
