Website: Property tree release notes.
[SVN r76680]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -245,6 +245,24 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/property_tree">PropertyTree</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixes for bugs <a href="https://svn.boost.org/trac/boost/ticket/4840">#4840</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5259">#5259</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5281">#5281</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5944">#5944</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5757">#5757</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5710">#5710</a>,
+                and <a href="https://svn.boost.org/trac/boost/ticket/5307">#5307</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/uuid/">Uuid</a>:</span>
           <ul>
             <li>
