Website: Lexical cast notes.
[SVN r76686]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -216,6 +216,27 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs and warnings: <a href="https://svn.boost.org/trac/boost/ticket/6127">#6127</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6132">#6132</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6159">#6159</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6182">#6182</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6186">#6186</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6193">#6193</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6264">#6264</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6290">#6290</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6298">#6298</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6400">#6400</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/locale/">Locale</a>:</span>
           <ul>
             <li>
