Website: Icl release notes.
[SVN r76698]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -164,6 +164,25 @@
       </li>
       <li>
         <div>
+          [phrace library..<a href="/libs/icl/">Icl</a>:]
+          <ul>
+            <li>
+              <div>
+                Fixed tickets <a href="https://svn.boost.org/trac/boost/ticket/6095">#6095</a>
+                and <a href="https://svn.boost.org/trac/boost/ticket/6210">#6210</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added move semantics for constructors, assignment operators and binary
+                operators.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
