Website: Fix type.
[SVN r76699]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -164,7 +164,7 @@
       </li>
       <li>
         <div>
-          [phrace library..<a href="/libs/icl/">Icl</a>:]
+          <span class="library"><a href="/libs/icl/">Icl</a>:</span>
           <ul>
             <li>
               <div>
